# ocicrypt-rs

./: Cargo.toml  build.rs
data/: ocicrypt_config.json
src/: config.rs  helpers.rs  lib.rs
src/keywrap/: jwe.rs  keyprovider.rs  mod.rs
src/utils/: keyprovider.rs  mod.rs  runner.rs
src/utils/grpc/: mod.rs
src/utils/keyprovider/: keyprovider.rs
src/utils/proto/: keyprovider.proto
src/utils/ttrpc/: keyprovider.rs  keyprovider_ttrpc.rs  mod.rs
