[package]
name = "ocicrypt-rs"
version = "0.1.0"
description = "the OCI image spec implementation of container image encryption"
repository = "https://github.com/containers/ocicrypt-rs"
readme = "README.md"
license = "Apache-2.0"
authors = ["The ocicrypt Authors"]
edition = "2018"

[features]
default = ["keywrap-jwe","keywrap-keyprovider","utils-runner","utils-keyprovider"]
keywrap-jwe = []
keywrap-keyprovider = []
utils-runner = []
utils-keyprovider = []

[dependencies]
anyhow = ">=1.0"
josekit = ">=0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.2.1"
tonic = "0.5.0"
prost = "0.8.0"
prost-types = "0.7.0"
aes-gcm = "0.9.2"
base64 = "0.13.0"
tokio = { version = "1.9.0", features = ["full"]}

[build-dependencies]
tonic-build = "0.5.1"